Ready for Testing

--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,7 @@
 {
   "hosting": {
-    "public": "src/pages",
+    "public": "src",
+    "cleanUrls": true,
     "ignore": [
       "firebase.json",
       "**/.*",
