--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
+    "@google-cloud/secret-manager": "^6.1.1",
     "firebase": "^12.5.0",
-    "firebase-tools": "^14.23.0"
+    "firebase-tools": "^14.24.1"
   }
 }
